--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hammock-modelviwer",
+  "name": "hammock-modelviewer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
